--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             document.getElementById("publist").innerHTML = "";
 
             // Fetch and display publications
-            publist(permalink, "publist", 20);
+            publist(permalink, "publist");
         }
     </script>
 </body>
